more regression trees

--- a/project.ipynb
+++ b/project.ipynb
@@ -26,31 +26,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Housing discrimination has, in one way or another, existed in the United\n",
-    "States since independence. After reconstruction, several tactics became\n",
-    "commonplace, including racial deed covenants, and redlining. Across the\n",
-    "nation, there was evidence of \"white flight\", or the movement of\n",
-    "whites out of neighborhoods with minorities due to fears over home value\n",
-    "depreciation or other factors. Real-estate agents commonly attempted to\n",
-    "abuse these fears with a tactic known as \"blockbusting\" in which they\n",
-    "would spread fear over minority-move-ins leading to a fire sale of homes\n",
-    "in a neighborhood (Rothstein, 2017).\n",
+    "Housing discrimination has, in one way or another, existed in the United States since independence. After reconstruction, several tactics became commonplace, including racial deed covenants, and redlining. Across the nation, there was evidence of ``white flight'', or the movement of whites out of neighborhoods with minorities due to fears over home value depreciation or other factors. Real-estate agents commonly attempted to abuse these fears with a tactic known as \"blockbusting\" in which they would spread fear over minority-move-ins leading to a fire sale of homes in a neighborhood (Rothstein, 2017).\n",
     "\n",
-    "Much has been researched about the modern-day effects of these past\n",
-    "tactics, whether in deed covenants leading to improved relative\n",
-    "neighborhood quality (Sood, Ehrman-Solberg, 2024), or redlining leading\n",
-    "to localized areas of higher poverty (Appel, Nickerson, 2016), or simply\n",
-    "lower quality of opportunity in majority-black neighborhoods (Chetty, et\n",
-    "al, 2014). There is also evidence of modern-day tactics still occurring\n",
-    "in the housing market, whether in lending markets (Quillian, Lee,\n",
-    "Honoré, 2020), or in real estates continuing to practice ``racial\n",
-    "steering'', the process of, whether knowing it or not, primarily showing\n",
-    "people of minority groups neighborhoods that are also primarily of that\n",
-    "minority group (Glenn, 2018). \n",
+    "Much has been researched about the modern-day effects of these past tactics, whether in deed covenants leading to improved relative neighborhood quality (Sood, Ehrman-Solberg, 2024), or redlining leading to localized areas of higher poverty (Appel, Nickerson, 2016), or simply lower quality of opportunity in majority-black neighborhoods (Chetty, et al, 2014). There is also evidence of modern-day tactics still occurring in the housing market, whether in lending markets (Quillian, Lee, Honoré, 2020), or in real estates continuing to practice \"racial steering\", the process of, whether knowing it or not, primarily showing people of minority groups neighborhoods that are also primarily of that minority group (Glenn, 2018). \n",
     "\n",
-    "This paper seeks to contribute literature surrounding economic effects of racism \n",
-    "by analyzing the modern accuracy of the perceived link that 50's era blockbusting relied\n",
-    "on -- do minority move-ins suppress home-value appreciation?\n",
+    "This paper seeks to contribute literature surrounding economic effects of racism  by analyzing the modern accuracy of the perceived link that 50's era blockbusting relied on -- do minority move-ins suppress home-value appreciation?\n",
     "\n",
     "There is a long theoretical literature on discrimination, intiially starting with a model for taste-based discrimination by Gary Becker in 1957. There now many other models for discrimination, including most famously Ken Arrow's 1973 'statistical discriminination', but Becker's remains the most commonly used. There are also many theoretical frameworks for home sale matching, (Badarinza, Balasubramaniam, Ramadorai, 2024), and discriminiation in labor market matching (Combes et al, 2016), but there have been few attempts to discrimination theory in the housing market. The sole notable attempt was in (Combs, et al, 2015), which built a theoretical framework for racism in home sales and lease arrangements, and then empirically tested the lease framework. This has been extended to look at a case in Moscow, where much of the racial discirmination is overt (Avetian, 2022)\n",
     "\n",
@@ -63,24 +43,16 @@
     "(Initial Period) that are majority white (we are uninterested in the\n",
     "effect on majority-minority neighborhoods), and in metropolitan\n",
     "statistical areas (necessary for appreciation normalization). I take the\n",
-    "minority move-in share\", or the ratio of loans for new purchases made\n",
+    "\"minority move-in share\", or the ratio of loans for new purchases made\n",
     "in that zip code to minorities, and then look at those same zip codes\n",
     "over the 2012-2013 period (Treatment Period) and analyze what\n",
-    "``treatment'' was applied (the difference in minority move-in share from\n",
+    "\"treatment\" was applied (the difference in minority move-in share from\n",
     "the previous period), which is our main explanatory variable. Next, we\n",
     "analyze the association between the change in minority move-in-share and\n",
     "the future appreciation in home prices, relative to their MSA average,\n",
     "for the next 6 years (ending in 2019). This should inform us what the\n",
     "effect of a sudden increase in minority move-ins is on home value\n",
-    "appreciation.\n",
-    "\n",
-    "I find that the effect of an increase in minority move-in share on\n",
-    "home-value appreciation is unclear, relative to the metropolitan\n",
-    "statistical area. While the mean home value appreciation does decrease\n",
-    "in the treatment group relative to the control, there is an incredibly\n",
-    "high degree of variation in the data.\n",
-    "\n",
-    "For regressions, I find that predictive quality is not meaningfully improved when controlling for previous neighborhood demographics, neighborhood income, or neighborhood political affiliation, and that there is not sufficient information to conclude there is a correlation between change in minority move-ins and home-value appreciation."
+    "appreciation."
    ]
   },
   {
@@ -2399,6 +2371,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This tree with all of my $X$ variables indicates that the income level, income inequality, and political activity are the largest predictors of home value appreciation relative to metropolitan area. Having a higher per capita income level suggests lower home value appreciation, as does being more highly republican. Higher political activity is associated with higher home value appreciation in higher-income areas, but lower home value appreciation in lower-income areas. All terms have an incredibly high level of error."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
@@ -2441,6 +2420,13 @@
    "source": [
     "sqrf_fig = plt.figure(figsize=(25,20))\n",
     "sqrf_fig = tree.plot_tree(sqft_tree, feature_names=X_sub.columns, filled=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This tree just contains my main $X$ variables (change in minority move-ins, percent of population that voted republican, total treatment move-ins, and proportion of the zip code that is white). This tree seems to indicate that the total quantity of move-ins is of high importance, with fewer move-ins indicating higher appreciation (this is counterintuitive to economic intuition). In places with higher move-ins, the proportion of republicans is the next most important variable, with less republican areas experiencing higher home-value appreciation. Next is the treatment. ZIP Codes with a high quantity of move-ins that recieve a high treatment dose experience lower home-value appreciation than those who don't. High move-in republican ZIP codes with higher treatment doses have even lower home-value appreciations. In low move-in ZIP codes, treatment dose is the next most important, followed by republican proportion. The same effects are seen. The error is higher on this model due to the removal of many control variables."
    ]
   },
   {
@@ -2516,6 +2502,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This table indicates that by far the most important variable is per capita income. Our regression trees above indicate that higher per capita income is correlated with lower . This seems to run slightly contrary to our regressions which indicated that income had little to no effect on home-value appreciation. It's possible that this is due to a slightly distinct $y$ between our ML models and our regressions. In the regressions, we looked at the raw home value appreciation, and then added the average home-value appreciation in the MSA as a control term. In the ML models, to improve clarity, we are looking at the difference between home value appreciation and the average home value appreciation the MSA.\n",
+    "\n",
+    "My regression trees (and random forest model) allow for significantly more analysis of interactions between variables."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Conclusion"
    ]
   },
@@ -2523,9 +2518,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this paper, I analyze the link between an increase in the share of minority move-ins and home values on a neighborhood level. I construct a table of zip codes that includes, from federal loan underwriting data, the share of minority move-ins in the initial period, and the share of minority move-ins in the treatment period. The table also includes Zillow data showing the change in home values. I normalize this change in home values to the MSA the zip code is in, and the initial home values. \n",
+    "In this paper, I analyze the link between an increase in the share of\n",
+    "minority move-ins and home values on a neighborhood level. I construct a\n",
+    "table of zip codes that includes, from federal loan underwriting data,\n",
+    "the share of minority move-ins in the initial period, and the share of\n",
+    "minority move-ins in the treatment period. The table also includes\n",
+    "Zillow data showing the change in home values. I normalize this change\n",
+    "in home values to the MSA the zip code is in, and the initial home\n",
+    "values.\n",
     "\n",
-    "My findings indicate that there is slight, if any association between my an increase in minority move-ins and home values, at least on a zip-code level. Regressions indicate that there is a slight, if any, increase in home-values due to an increase in minority move-ins. I am unable, with this level of data and analysis, to conclude the extent to which an increase in minority move-ins can explain any future change in home values (while controlling for MSA). There is little-to-no increased clarity when controlling for regional political affiliation, neighborhood income, or neighborhood income inequality."
+    "My findings indicate that there is slight, if any association between my\n",
+    "an increase in minority move-ins and home values, at least on a zip-code\n",
+    "level. Regressions indicate that there is a slight, if any, increase in\n",
+    "home-values due to an increase in minority move-ins. I am unable, with\n",
+    "this level of data and analysis, to conclude the extent to which an\n",
+    "increase in minority move-ins can explain any future change in home\n",
+    "values (while controlling for MSA and political affiliation). There is little-to-no increased\n",
+    "clarity when controlling for regional political affiliation,\n",
+    "neighborhood income, or neighborhood income inequality."
    ]
   },
   {
@@ -2539,17 +2549,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Appel, I., & Nickerson, J. (2016). Pockets of Poverty: The Long-Term Effects of Redlining. https://papers.ssrn.com/sol3/Delivery.cfm?abstractid=2852856\n",
+    "Appel, I., \\& Nickerson, J. (2016). Pockets of Poverty: The Long-Term Effects of Redlining. https://papers.ssrn.com/sol3/Delivery.cfm?abstractid=2852856\n",
     "\n",
-    "Korver-Glenn, E. (2018). Compounding inequalities: How Racial Stereotypes and Discrimination Accumulate Across the Stages of Housing Exchange. *American Sociological Review*, 83(4), 627–656. https://doi.org/10.1177/0003122418781774\n",
-    "\n",
-    "Manson, S., Schroeder, J., Van Riper, D., Knowles, K., Kugler, T., Roberts, F., & Ruggles, S. (2024). *National Historical Geographic Information System: Version 19.0* [Dataset]. Minneapolis, MN: IPUMS. https://doi.org/10.18128/D050.V19.0\n",
-    "\n",
-    "Quillian, L., Lee, J. J., & Honoré, B. (2020). Racial Discrimination in the U.S. Housing and Mortgage Lending Markets: A Quantitative Review of Trends, 1976–2016. *Race and Social Problems*, 12(1), 13–28. https://doi.org/10.1007/s12552-019-09276-x\n",
-    "\n",
-    "Rothstein, R. (2017). *The Color of Law: A Forgotten History of How Our Government Segregated America* (First edition). Liveright Publishing Corporation, a division of W. W. Norton & Company.\n",
-    "\n",
-    "Sood, A., Erhman-Solberg, K. (2024). The Long Shadow of Housing Discrimination: Evidence from Racial Covenants. https://drive.google.com/file/d/1uLSaQxWiSHKMuckF2gFpATywQD2J7No5/view?usp=embed_facebook"
+    "Arrow, K. (1971). \\textit{The Theory of Discrimination}. \\\\\n",
+    "https://dataspace.princeton.edu/handle/88435/dsp014t64gn18f\n",
+    "    \n",
+    "Avetian, V. (2022). Consider the Slavs: Overt Discrimination and Racial Disparities in Rental Housing. https://www.tse-fr.eu/sites/default/files/TSE/documents/conf/2022/echoppe/avetian.pdf\n",
+    "    \n",
+    "Badarinza, C., Balasubramaniam, V., \\& Ramadorai, T. (2024). In Search of the Matching Function in the Housing Market (SSRN Scholarly Paper No. 4594519). https://doi.org/10.2139/ssrn.4594519\n",
+    "    \n",
+    "Becker, G. S. (1971). The Economics of Discrimination. University of Chicago Press.\n",
+    "    \n",
+    "Combes, P.-P., Decreuse, B., Laouénan, M., \\& Trannoy, A. (2016). Customer Discrimination and Employment Outcomes: Theory and Evidence From the French Labor Market. \\textit{Journal of Labor Economics}, 34(1), 107–160. https://doi.org/10.1086/682332\n",
+    "    \n",
+    "Korver-Glenn, E. (2018). Compounding inequalities: How racial stereotypes and discrimination accumulate across the stages of housing exchange. American Sociological Review, 83(4), 627–656. https://doi.org/10.1177/0003122418781774\n",
+    "    \n",
+    "Manson, S., Schroeder, J., Van Riper, D., Knowles, K., Kugler, T., Roberts, F., \\& Ruggles, S. (2024). National historical geographic information system: Version 19. 0 [Dataset]. Minneapolis, MN: IPUMS. https://doi.org/10.18128/D050.V19.0\n",
+    "    \n",
+    "Quillian, L., Lee, J. J., \\& Honoré, B. (2020). Racial discrimination in the u. S. Housing and mortgage lending markets: A quantitative review of trends, 1976–2016. Race and Social Problems, 12(1), 13–28. https://doi.org/10.1007/s12552-019-09276-x\n",
+    "    \n",
+    "Rothstein, R. (2017). \\textit{The Color of law: A Forgotten History of How Our Government Segregated America} (First edition). Liveright Publishing Corporation, a division of W. W. Norton \\& Company.\n",
+    "    \n",
+    "Sood, A., Erhman-Solberg, K. (2024). The Long Shadow of Housing Discrimination: Evidence from Racial Covenants https://drive.google.com/file/d/1uLSaQxWiSHKMuckF2gFpATywQD2J7No5/    "
    ]
   },
   {
@@ -2570,6 +2591,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Project Two:\n",
     "- Improved data description in intro (no longer hyperlinked, full names written)\n",
     "- Added further explanation for choices of variables\n",
     "- Removed some redundant code explanation\n",
@@ -2578,7 +2600,12 @@
     "- Improved readability and labeling of all plots\n",
     "- Added more justification for graph scale\n",
     "- Improved language use throughout project\n",
-    "- I didn't modify my analysis of Figure 4 because I don't think it's fair to say the graph supports my hypothesis. The point of that graph is to show how large the variation in home value appreciation is, especially compared to the small change from minority move-ins."
+    "- I didn't modify my analysis of Figure 4 because I don't think it's fair to say the graph supports my hypothesis. The point of that graph is to show how large the variation in home value appreciation is, especially compared to the small change from minority move-ins.\n",
+    "\n",
+    "Final Project:\n",
+    "- Fixed bugs in data import\n",
+    "- Added subset table for zip codes with minority move-ins\n",
+    "- "
    ]
   }
  ],
