--- a/extraneous/extraneous_code.ipynb
+++ b/extraneous/extraneous_code.ipynb
@@ -312,6 +312,45 @@
     "# plt.xticks(quintile_avg_appreciation['quintile'], ['Q1', 'Q2', 'Q3', 'Q4', 'Q5'])\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reg_data = data_table.dropna(subset=['change_in_min_share', 'value_diff_2019', 'msa_avg_value_ratio_2019', 'pct_rep', 'late_move_ins', 'per_cap_inc', 'white'])\n",
+    "reg_data['rep_x_early_late'] = reg_data['pct_rep'] * reg_data['change_in_min_share']\n",
+    "reg_data['highly_rep'] = (reg_data['pct_rep'] > reg_data['pct_rep'].quantile(0.50)).astype(int)\n",
+    "reg_data['high_rep_x_chg'] = reg_data['highly_rep'] * reg_data['change_in_min_share']\n",
+    "reg_data['intercept'] = 1\n",
+    "X7 = reg_data[['intercept', 'change_in_min_share', 'pct_rep', 'msa_avg_value_ratio_2019', 'late_move_ins', 'per_cap_inc', 'white']]\n",
+    "X8 = reg_data[['intercept', 'change_in_min_share', 'rep_x_early_late', 'msa_avg_value_ratio_2019', 'pct_rep', 'late_move_ins', 'per_cap_inc', 'white']]\n",
+    "X9 = reg_data[['intercept', 'change_in_min_share', 'high_rep_x_chg', 'msa_avg_value_ratio_2019', 'highly_rep', 'late_move_ins', 'per_cap_inc', 'white']]\n",
+    "y = reg_data['value_ratio_2019']\n",
+    "model7 = sm.OLS(y, X7).fit()\n",
+    "model8 = sm.OLS(y, X8).fit()\n",
+    "model9 = sm.OLS(y, X9).fit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stargazer = Stargazer([model7, model8, model9])\n",
+    "stargazer.custom_columns([\"Home Value Change (%) (2010-2017)\"],[3])\n",
+    "HTML(stargazer.render_html())\n",
+    "# print(stargazer.render_latex()) #if you use Latex (Overleaf.com)"
+   ]
   }
  ],
  "metadata": {
